# server/src/types.ts
@@ -1,7 +1,21 @@
+export enum Role {
+  ADMIN = 'admin',
+  USER = 'user',
+  VIEWER = 'viewer'
+}
+
+export interface User {
+  id: string;
+  email: string;
+  password: string;
+  role: Role;
+}
+
 export interface Vpn {
   id: string;
   ownerId: string;
   name: string;
+  tariffId: string;
 }
 
 export type JobStatus = 'PENDING' | 'SUCCESS' | 'FAILED';
